<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_100"
              android:orientation="vertical"
              android:weightSum="4">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.05"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/anatext" />



        <ImageView
                android:id="@+id/icon"
                style="@style/ThemeOverlay.FirebaseIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_firebase_lockup"
                android:src="@drawable/asd" />

        <TextView
            android:text="
"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/anatextbb"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:gravity="center" />

        <TextView
            android:text="HERŞEY HAKKINDA ODA OLUŞTURABİLİRSİN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="12sp"
            android:gravity="center" />
        <TextView
            android:text="VE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/anatexts"
            android:textSize="12sp"
            android:gravity="center" />
        <TextView
            android:text="İSTEDİĞİN İSME SAHİP OLABİLİRSİN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/anatexst"
            android:textSize="12sp"
            android:gravity="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />
        <TextView
            android:text="YOU CAN CREATE ROOM ABOUT EVERYTHING"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView51"
            android:textSize="12sp"
            android:gravity="center" />
        <TextView
            android:text="AND"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/anagtext"
            android:textSize="12sp"
            android:gravity="center" />
        <TextView
            android:text="YOU CAN HAVE EVERY NAME YOU WANT "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/anatefxt"
            android:textSize="12sp"
            android:gravity="center" />


    </LinearLayout>


    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/grey_300"
            android:gravity="center_vertical">

        <LinearLayout
                android:id="@+id/email_password_fields"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_in"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
            <Button
                    android:id="@+id/email_create_account_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create_account"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/email_password_buttons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_password_fields"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <EditText
                    android:id="@+id/field_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.29"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            <EditText
                    android:id="@+id/field_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.29"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" android:elegantTextHeight="false"
                    android:visibility="visible"/>
        </LinearLayout>

        <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="gone" />

    </RelativeLayout>


</LinearLayout>